navier_stokes/membrane/jitfailure-dolfin_expression_77787b9410d971e9270d33c5179bbb1a/error.log
/tmp/tmp1mlve_kj/dolfin_expression_77787b9410d971e9270d33c5179bbb1a.cpp: In member function ‘virtual void dolfin::dolfin_expression_77787b9410d971e9270d33c5179bbb1a::eval(Eigen::Ref<Eigen::Matrix<double, -1, 1> >, Eigen::Ref<const Eigen::Matrix<double, -1, 1> >) const’:
/tmp/tmp1mlve_kj/dolfin_expression_77787b9410d971e9270d33c5179bbb1a.cpp:61:50: error: ‘z_n’ was not declared in this scope
           values[0] = 4.0*1.5*x[1]*(1.0 - x[1]) *z_n(x) * / pow(1.0, 2);
                                                  ^~~
/tmp/tmp1mlve_kj/dolfin_expression_77787b9410d971e9270d33c5179bbb1a.cpp:61:50: note: suggested alternative: ‘__yn’
           values[0] = 4.0*1.5*x[1]*(1.0 - x[1]) *z_n(x) * / pow(1.0, 2);
                                                  ^~~
                                                  __yn
/tmp/tmp1mlve_kj/dolfin_expression_77787b9410d971e9270d33c5179bbb1a.cpp:61:59: error: expected primary-expression before ‘/’ token
           values[0] = 4.0*1.5*x[1]*(1.0 - x[1]) *z_n(x) * / pow(1.0, 2);
                                                           ^
